All functional, need to style

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -30,7 +30,10 @@
 
 
     <table id='todoList' class='table'>
-        <tr>
+        <thead>
+          <tr>
+
+
             <th class='taskHead'>
                 Task
             </th>
@@ -40,11 +43,12 @@
             <th class='deleteHead'>
                 Delete
             </th>
-        </tr>
+            </tr>
+        </thead>
 
-        <tr id='taskList' >
+        <tbody id='taskList' >
 
-        </tr>
+        </tbody>
 
     </table>
 
