--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,43 +1,145 @@
 body{
   font-family: 'Ubuntu Condensed', sans-serif;
   text-align: center;
+  background-color: #e4f1fe
 }
-
+h1{
+  color: #00008b;
+  font-size: 100px;
+  margin: 10px
+}
+h2{
+  color: #002a2a;
+  font-size: 50px;
+  margin: 5px;
+}
 #task{
   width: 50%;
-  height: 25px;
+  height: 40px;
+  margin: 10px;
+  font-size: 25px;
+  font-family: 'Ubuntu Condensed', sans-serif;
+  border: 0px;
+}
+
+#todoList{
+
+  margin: 0px auto;
+  table-layout: fixed;
+  width: 50%;
+  text-align: left;
+  font-size: 20px;
 }
 table, th, td{
-  border: 1px solid black;
   border-collapse: collapse;
+  padding: 10px;
 }
 
-.table {
-  width: 50%;
-  margin-bottom: 2rem;
-
-  text-align: left;
-
-  }
-
-.taskHead{
-  text-align: left;
-  width: 50px;
+th {
+    background-color:  #996633;
+    color: white;
 }
-.completeHead{
-  text-align: left;
-  width: 25px;
-}
-.deleteHead{
-  text-align: left;
-  width:50px;
+td{
+  border: 15px;
+  line-height: 40px;
+
+
 }
 
-.task{
-  float:left;
-  width: 300px;
+tr:nth-child(even) {
+  background-color: #f2e6d9;
+}
+tr:hover{
+  background-color: #f5f5f5;
+}
+
+.toggle{
+  outline: 1px solid black;
 }
 
 .checkedline {
   text-decoration: line-through;
+  color: grey;
+}
+
+#taskSubmit{
+  margin: 10px 0 20px 0;
+	-moz-box-shadow: 3px 4px 0px 0px #899599;
+	-webkit-box-shadow: 3px 4px 0px 0px #899599;
+	box-shadow: 3px 4px 0px 0px #899599;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #bab1ba));
+	background:-moz-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+	background:-webkit-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+	background:-o-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+	background:-ms-linear-gradient(top, #ededed 5%, #bab1ba 100%);
+	background:linear-gradient(to bottom, #ededed 5%, #bab1ba 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#bab1ba',GradientType=0);
+	background-color:#ededed;
+	-moz-border-radius:15px;
+	-webkit-border-radius:15px;
+	border-radius:15px;
+	border:1px solid #d6bcd6;
+	display:inline-block;
+	cursor:pointer;
+	color: #996633;
+	font-family:Arial;
+	font-size:17px;
+	padding:7px 25px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #e1e2ed;
+}
+#taskSubmit:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #bab1ba), color-stop(1, #ededed));
+	background:-moz-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+	background:-webkit-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+	background:-o-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+	background:-ms-linear-gradient(top, #bab1ba 5%, #ededed 100%);
+	background:linear-gradient(to bottom, #bab1ba 5%, #ededed 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#bab1ba', endColorstr='#ededed',GradientType=0);
+	background-color:#bab1ba;
+}
+#taskSubmit:active {
+	position:relative;
+	top:1px;
+}
+
+.delete {
+	-moz-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	-webkit-box-shadow:inset 0px 1px 0px 0px #ffffff;
+	box-shadow:inset 0px 1px 0px 0px #ffffff;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #ededed), color-stop(1, #dfdfdf));
+	background:-moz-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-webkit-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-o-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:-ms-linear-gradient(top, #ededed 5%, #dfdfdf 100%);
+	background:linear-gradient(to bottom, #ededed 5%, #dfdfdf 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#dfdfdf',GradientType=0);
+	background-color:#ededed;
+	-moz-border-radius:6px;
+	-webkit-border-radius:6px;
+	border-radius:6px;
+	border:1px solid #dcdcdc;
+	display:inline-block;
+	cursor:pointer;
+	color:#777777;
+	font-family:Arial;
+	font-size:15px;
+	font-weight:bold;
+	padding:4px 39px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #ffffff;
+}
+.delete:hover {
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #dfdfdf), color-stop(1, #ededed));
+	background:-moz-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-webkit-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-o-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:-ms-linear-gradient(top, #dfdfdf 5%, #ededed 100%);
+	background:linear-gradient(to bottom, #dfdfdf 5%, #ededed 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#ededed',GradientType=0);
+	background-color:#dfdfdf;
+}
+.delete:active {
+	position:relative;
+	top:1px;
 }
