--- a/public/views/index.html
+++ b/public/views/index.html
@@ -4,15 +4,11 @@
 <head>
     <meta charset='utf-8'>
 
-
     <title>To Do</title>
     <script src='/vendor/jquery.min.js'></script>
     <script src='/scripts/client.js'></script>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
-
-    <link rel='stylesheet' href='/styles/styles.css'/>
-
-
+    <link rel='stylesheet' href='/styles/styles.css' />
 
 </head>
 
@@ -23,30 +19,28 @@
     <form id='taskEntry'>
         <div class='form-group'>
             <label for='Task:'></label>
-            <input type='text' id='task' name='task' />
+            <input type='text' id='task' name='task' required/>
         </div>
-        <button id='taskSubmit' class='taskButton'>Submit</button>
+        <button id='taskSubmit' class='taskButton'>Submit Task</button>
     </form>
 
 
     <table id='todoList' class='table'>
         <thead>
-          <tr>
-
-
-            <th class='taskHead'>
-                Task
-            </th>
-            <th class='completeHead'>
-                Completed
-            </th>
-            <th class='deleteHead'>
-                Delete
-            </th>
+            <tr>
+                <th class='taskHead'>
+                    Task
+                </th>
+                <th class='completeHead'>
+                    Completed
+                </th>
+                <th class='deleteHead'>
+                    Delete
+                </th>
             </tr>
         </thead>
 
-        <tbody id='taskList' >
+        <tbody id='taskList'>
 
         </tbody>
 
